# mindjunkies

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  architecture.md  collectstatic.sh  conftest.py  deployment-guide.md  dev.ps1  docker-compose.elasticsearch_redis.yml  docker-compose.yml  entrypoint.sh  manage.py  migrate.sh  package-lock.json  pyproject.toml  redis.conf  sonar-project.properties
.github/ISSUE_TEMPLATE/: pull_request.md  reduce-code-complexity.md
.github/workflows/: build.yml  ci.yml  sonarqube.yml  test-django.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0002_alter_user_managers_alter_user_role_added_admin_role.py  0003_alter_profile_avatar.py
cdn/: conf.py
classrooms/: admin.py  forms.py  models.py  urls.py  views.py
classrooms/migrations/: 0001_initial.py  0002_alter_classroom_course_image.py
config/: jass_jwt.py  models.py
core/: models.py
courses/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_course_alter_courseteacher_course_and_more.py  0007_alter_course_course_image.py
dashboard/: urls.py  views.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Folder-structure.md  README.md  SRS.md
docs/apps/: overview.md
docs/guides/: advanced-usage.md  getting-started.md
exam/: urls.py  views.py
forums/: forms.py  models.py  urls.py  views.py
home/: views.py
k8s/: cert-issuer.yml  ingress.yml
k8s/apps/: django-mindjunkies-web.yml  elasticsearch.yml  redis.yml
k8s/jobs/: django-collectstatic-job.yml  django-migrate-job.yml  django-rebuild-search-job.yml
lecture/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
lecture/migrations/: 0001_initial.py  0002_alter_lecture_options_alter_lecturepdf_options_and_more.py  0002_lecturetitle_remove_lecture_pdf_file_lecturepdf_and_more.py  0002_lecturevideo.py  0004_lecturevideo_is_running.py
lecture_videos/hls_output/: file_example_MP4_480_1_5MG_hls.m3u8  file_example_MP4_480_1_5MG_hls0.ts  file_example_MP4_480_1_5MG_hls1.ts  file_example_MP4_480_1_5MG_hls2.ts  file_example_MP4_480_1_5MG_hls3.ts
liveclasses/: apps.py  jass_jwt.py  models.py  urls.py  views.py
mindjunkies/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
mindjunkies/courses/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
mindjunkies/dashboard/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
mindjunkies/forums/: admin.py  apps.py  documents.py  forms.py  models.py  tests.py  urls.py  views.py
mindjunkies/home/: apps.py  tests.py  urls.py  views.py
mindjunkies/lecture/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
mindjunkies/live_classes/: admin.py  apps.py  models.py  private.pem  urls.py  views.py
mindjunkies/payments/: admin.py  apps.py  models.py  urls.py  (+1 more)
project/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
scripts/: dummy_data.json  populate_course_categories.py  seed_admins.py  seed_data.py
tests/: do_storage_bucket_test.py
utils/: email_backends.py  email_utils.py
videoConf/: apps.py  urls.py  views.py
(+272 files in other folders)
